[package]
name = "flightbox"
version = "0.0.1"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
repository = "https://github.com/mrjackwills/flightbox_backend"
description = "adsb web client"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
futures-util = "0.3"
openssl = { version = '0.10', features = ["vendored"] }
reqwest = {version = "0.11", features=["json", "native-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = {version="0.3", features=["local-offset", "macros"]}
tokio = {version = "1.24", features=["full"]}
tokio-tungstenite={version= "0.18", features = ["native-tls"]}
tower = { version = "0.4", features = ["full"] }
tower-http = {version="0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip=true
debug = false

