[package]
name = "flightbox"
version = "0.1.17"
edition = "2021"
authors = ["Jack Wills <email@mrjackwills.com>"]
repository = "https://github.com/mrjackwills/flightbox_backend"
description = "adsb web client"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unused_async = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
module_name_repetitions = "allow"
doc_markdown = "allow"

[dependencies]
dotenvy = "0.15"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
	"brotli",
	"gzip",
	"json",
	"rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["local-offset", "macros"] }
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false
